Adding defaults to cpu/memory limits/requests minimum value so the control won't fail by default

--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -87,13 +87,13 @@
             ],
             "untrustedRegistries": [],
             "memory_request_max": [],
-            "memory_request_min": [],
+            "memory_request_min": ["0"],
             "memory_limit_max": [],
-            "memory_limit_min": [],
+            "memory_limit_min": ["0"],
             "cpu_request_max": [],
-            "cpu_request_min": [],
+            "cpu_request_min": ["0"],
             "cpu_limit_max": [],
-            "cpu_limit_min": [],
+            "cpu_limit_min": ["0"],
             "wlKnownNames": [
                 "coredns",
                 "kube-proxy",
