split rule resources-other2-in-default-namespace per kind
Signed-off-by: Amir Malka <amirm@armosec.io>

--- a/rules/poddisruptionbudget-in-default-namespace/test/poddisruptionbudget/input/poddisruptionbudget.yaml
+++ b/rules/poddisruptionbudget-in-default-namespace/test/poddisruptionbudget/input/poddisruptionbudget.yaml
@@ -1,7 +1,8 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: zk-pdb
+  name: kubescape
+  namespace: default
 spec:
   minAvailable: 2
   selector:
