--- a/controls/C-0192-ensurethattheclusterhasatleastoneactivepolicycontrolmechanisminplace.json
+++ b/controls/C-0192-ensurethattheclusterhasatleastoneactivepolicycontrolmechanisminplace.json
@@ -13,7 +13,8 @@
         "armoBuiltin": true
     },
     "rulesNames": [
-        "pod-security-admission-applied"
+        "pod-security-admission-applied-1",
+        "pod-security-admission-applied-2"
     ],
     "baseScore": 4,
     "impact_statement": "Where policy control systems are in place, there is a risk that workloads required for the operation of the cluster may be stopped from running. Care is required when implementing admission control policies to ensure that this does not occur.",
