--- a/rules/exposure-to-internet/test/failed_with_ingress/input/ingress.yaml
+++ b/rules/exposure-to-internet/test/failed_with_ingress/input/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: my-ingress
+  namespace: default
 spec:
   ingressClassName: nginx
   rules:
