--- a/controls/C-0211-applysecuritycontexttoyourpodsandcontainers.json
+++ b/controls/C-0211-applysecuritycontexttoyourpodsandcontainers.json
@@ -45,7 +45,8 @@
    },
     "scanningScope": {
         "matches": [
-            "cluster"
+            "cluster",
+            "file"
         ]
     }
 }
