--- a/controls/C-0240-ensurenetworkpolicyisenabledandsetasappropriate.json
+++ b/controls/C-0240-ensurenetworkpolicyisenabledandsetasappropriate.json
@@ -19,7 +19,7 @@
     "default_value": "By default, Network Policy is disabled.",
     "scanningScope": {
         "matches": [
-            "cluster"
+            "AKS"
         ]
     }
 }
