--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -20,6 +20,5 @@ jobs:
           GH_PAT: ${{ secrets.PAT }}
           COMMIT_BODY: "Sync control library docs from `regolibrary` repo"
           PR_BODY: Syncing the Control Library docs from `regolibrary` repository to update the `controls` documentation
-          PR_LABELS: |
-            automerge
-          COMMIT_PREFIX: ''
+          PR_LABELS: automerge
+          COMMIT_PREFIX: ""
