--- a/controls/C-0034-automaticmappingofserviceaccount.json
+++ b/controls/C-0034-automaticmappingofserviceaccount.json
@@ -4,7 +4,8 @@
         "armoBuiltin": true,
         "controlTypeTags": [
             "security",
-            "compliance"
+            "compliance",
+            "smartRemediation"
         ]
     },
     "description": "Potential attacker may gain access to a pod and steal its service account token. Therefore, it is recommended to disable automatic mapping of the service account tokens in service account configuration and enable it only for pods that need to use them.",
