--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -177,3 +177,5 @@ jobs:
           README_API_KEY: ${{ secrets.README_API_KEY }}
         run: |-
           python ./scripts/upload-readme.py
+      - name: execute docs generator script
+        run: python ./scripts/mk-generator.py
