--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -17,15 +17,15 @@ env:
   REGO_ARTIFACT_PATH: releaseDev
 
 jobs:
-  # testing link checks
-  markdown-link-check:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
-      - name: Check links
-        uses: gaurav-nelson/github-action-markdown-link-check@5c5dfc0ac2e225883c0e5f03a85311ec2830d368
-        with:
-          use-verbose-mode: 'yes'
+  # # testing link checks
+  # markdown-link-check:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
+  #     - name: Check links
+  #       uses: gaurav-nelson/github-action-markdown-link-check@5c5dfc0ac2e225883c0e5f03a85311ec2830d368
+  #       with:
+  #         use-verbose-mode: 'yes'
 
   # main job of testing and building the env.
   test_pr_checks:
