--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -13,6 +13,7 @@ env:
   REGO_ARTIFACT_KEY_NAME: rego_artifact
   REGO_ARTIFACT_PATH: releaseDev
   GH_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+  GO_VERSION: 1.20
 
 jobs:
   # main job of testing and building the env.
@@ -39,7 +40,6 @@ jobs:
       REGO_ARTIFACT_PATH: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_PATH }}
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/checkout@v4
         name: checkout repo content
         with:
           token: ${{ env.GH_ACCESS_TOKEN }}
@@ -60,7 +60,7 @@ jobs:
       - name: Set up Regal
         uses: StyraInc/setup-regal@v0.1.0
         with:
-          version: v0.10.1
+          version: v0.13.0
 
       - name: Lint Rego
         run: regal lint --format github rules
@@ -132,7 +132,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ks-and-rego-test]
     steps:
-      - uses: actions/checkout@v4
       - uses: actions/checkout@v4
         name: checkout repo content
         with:
