--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20
+          go-version: '1.20'
 
       # testing rego library
       - name: Test Regoes
@@ -59,6 +59,7 @@ jobs:
           for i in {1..5}; do 
               sudo apt install -y cmake && break || sleep 15; 
           done
+          echo "Using Go path: $(which go)"
           GOPATH=$(go env GOPATH) make
 
       - name: Set up Regal
