use fixpaths instead of reviewpaths when possible
Signed-off-by: YiscahLevySilas1 <yiscahls@armosec.io>

--- a/rules/non-root-containers/test/pod/input/pod.yaml
+++ b/rules/non-root-containers/test/pod/input/pod.yaml
@@ -6,7 +6,7 @@ metadata:
     role: myrole
 spec:
   securityContext:
-    allowPrivilegeEscalation: false
+    allowPrivilegeEscalation: true
   containers:
     - name: web
       image: nginx
