refactor non-root-containers
Signed-off-by: YiscahLevySilas1 <yiscahls@armosec.io>

--- a/controls/C-0211-applysecuritycontexttoyourpodsandcontainers.json
+++ b/controls/C-0211-applysecuritycontexttoyourpodsandcontainers.json
@@ -34,7 +34,8 @@
         "set-fsgroup-value",
         "set-fsgroupchangepolicy-value",
         "set-sysctls-params",
-        "set-supplementalgroups-values"
+        "set-supplementalgroups-values",
+        "rule-allow-privilege-escalation"
     ],
     "baseScore": 8,
     "impact_statement": "If you incorrectly apply security contexts, you may have trouble running the pods.",
