--- a/rules/non-root-containers/test/cronjob/input/cronjob.yaml
+++ b/rules/non-root-containers/test/cronjob/input/cronjob.yaml
@@ -8,6 +8,8 @@ spec:
     spec:
       template:
         spec:
+          securityContext:
+            runAsNonRoot: false
           containers:
           - name: hello
             image: busybox
