--- a/rules/non-root-containers/test/cronjob-runasuser/input/cronjob.yaml
+++ b/rules/non-root-containers/test/cronjob-runasuser/input/cronjob.yaml
@@ -16,5 +16,9 @@ spec:
             - /bin/sh
             - -c
             - date; echo Hello from the Kubernetes cluster
+            securityContext:
+              runAsUser: 0
           - name: hello2
+            securityContext:
+              runAsUser: 1000
           restartPolicy: OnFailure
