add allowed values and keys lists to C-0012
Signed-off-by: YiscahLevySilas1 <yiscahls@armosec.io>

--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -74,6 +74,8 @@
                 "_key_",
                 "_secret_"
             ],
+            "sensitiveKeyNamesAllowed": [],
+            "sensitiveValuesAllowed": [],
             "servicesNames": [
                 "nifi-service",
                 "argo-server",
