--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -37,6 +37,7 @@
                 "bin/busybox",
                 "usr/bin/busybox"
             ],
+            "publicRegistries": [],
             "sensitiveInterfaces": [
                 "nifi",
                 "argo-server",
@@ -84,6 +85,7 @@
                 "weave-scope-app",
                 "kubernetes-dashboard"
             ],
+            "untrustedRegistries": [],
             "memory_request_max": [],
             "memory_request_min": ["0"],
             "memory_limit_max": [],
