--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -74,6 +74,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.10.6
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+
 
       # validate control-ID duplications
       - run: python ./scripts/validations.py
