--- a/.github/workflows/create-release-without-st.yaml
+++ b/.github/workflows/create-release-without-st.yaml
@@ -42,6 +42,10 @@ jobs:
         uses: actions/setup-python@75f3110429a8c05be0e1bf360334e4cced2b63fa
         with:
           python-version: 3.10.6
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
       # generating subsections ids
       - name: Update frameworks subsections
