--- a/.github/workflows/create-release-v2.yaml
+++ b/.github/workflows/create-release-v2.yaml
@@ -1,6 +1,13 @@
 name: 'Create and Publish Tags with Testing and Artifact Handling'
 
 on:
+  workflow_dispatch:
+    inputs:
+      TAG:
+        description: 'Tag name'
+        required: true
+        type: string
+        
   push:
     tags:
       - 'v*.*.*-rc.*' 
