--- a/.github/workflows/create-release-v2.yaml
+++ b/.github/workflows/create-release-v2.yaml
@@ -30,6 +30,9 @@ jobs:
   build-and-rego-test:
     needs: [test_pr_checks]
     runs-on: ubuntu-latest
+    outputs:
+      REGO_ARTIFACT_KEY_NAME: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_KEY_NAME }}
+      REGO_ARTIFACT_PATH: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_PATH }}
     steps:
       - uses: actions/checkout@v2
         name: Checkout repo content
@@ -105,7 +108,7 @@ jobs:
                         "scan_local_list_of_files",
                         "scan_compliance_score"
                       ]'
-      DOWNLOAD_ARTIFACT_PATH: ${{ env.REGO_ARTIFACT_PATH }}
+      DOWNLOAD_ARTIFACT_PATH: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_PATH }}
     secrets: inherit
 
   # start release process
