fix to valid remediation
Signed-off-by: YiscahLevySilas1 <yiscahls@armosec.io>

--- a/rules/alert-any-hostpath/test/deployment/input/deployment.yaml
+++ b/rules/alert-any-hostpath/test/deployment/input/deployment.yaml
@@ -23,7 +23,7 @@ spec:
               name : test-volume
 
             - mountPath : /test-pd2
-              name : test-volume
+              name : test-volume2
       volumes :
         - name : test-volume
           hostPath :
