Refactor workload connection checks to use pod specifications in exposure rules

--- a/rules/exposure-to-internet-via-istio-ingress/test/failed_with_beta/input/service.yaml
+++ b/rules/exposure-to-internet-via-istio-ingress/test/failed_with_beta/input/service.yaml
@@ -34,10 +34,7 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: int-0721
-    context: default
-    name: int-0721
-    role: app
+    app: nginx
   sessionAffinity: None
   type: ClusterIP
 status:
