adding failing test
Signed-off-by: Matthias Bertschy <matthias.bertschy@gmail.com>

--- a/rules/exposure-to-internet/test/failed_with_service_nodeport/input/service2.yaml
+++ b/rules/exposure-to-internet/test/failed_with_service_nodeport/input/service2.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
-  namespace: ns1
+  name: my-service2
+  namespace: ns2
 spec:
   selector:
     app: argo-server
@@ -10,4 +10,4 @@ spec:
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30007
+      nodePort: 30008
