Update deployment namespace in test for service NodePort

--- a/rules/exposure-to-internet/test/failed_with_service_nodeport/input/deployment.yaml
+++ b/rules/exposure-to-internet/test/failed_with_service_nodeport/input/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: my-app
-  namespace: default
+  namespace: ns1
 spec:
   selector:
     matchLabels:
