--- a/.github/workflows/create-release-v2.yaml
+++ b/.github/workflows/create-release-v2.yaml
@@ -23,7 +23,7 @@ jobs:
       pull-requests: write
     uses: kubescape/workflows/.github/workflows/go-basic-tests.yaml@main
     with:
-      GO_VERSION: '1.21'
+      GO_VERSION: '1.23'
       BUILD_PATH: github.com/kubescape/regolibrary/gitregostore/...
     secrets: inherit
 
@@ -37,10 +37,10 @@ jobs:
       - uses: actions/checkout@v4
         name: Checkout repo content
 
-      - name: Set up Go 1.21
+      - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21
+          go-version: 1.23
 
       - name: Test Regos (Golang OPA hot rule compilation)
         working-directory: testrunner
