--- a/rules/ensure_network_policy_configured_in_labels/test/failed_pod_cilium_no_matched_label/input/pod.yaml
+++ b/rules/ensure_network_policy_configured_in_labels/test/failed_pod_cilium_no_matched_label/input/pod.yaml
@@ -9,3 +9,10 @@ spec:
   containers:
   - name: my-app
     image: my-app:1.0.0
+    resources:
+      requests:
+        memory: "64Mi"
+        cpu: "250m"
+      limits:
+        memory: "128Mi"
+        cpu: "500m"
