Fixed pod security context rego rules
Signed-off-by: Ben Michael <benm@armosec.io>

--- a/rules/set-supplementalgroups-values/test/cronjob/input/cronjob.yaml
+++ b/rules/set-supplementalgroups-values/test/cronjob/input/cronjob.yaml
@@ -1,4 +1,4 @@
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: hello
@@ -10,6 +10,8 @@ spec:
         spec :
           securityContext:
             fsGroup: 2000
+            supplementalGroups:
+              - 0
           hostNetwork: true
           containers :
             -
