--- a/rules/set-supplementalgroups-values/test/workload/input/deployment.yaml
+++ b/rules/set-supplementalgroups-values/test/workload/input/deployment.yaml
@@ -17,6 +17,8 @@ spec:
       securityContext:
         runAsUser: 2000
         runAsGroup: 3000
+        supplementalGroups:
+          - 0
       hostNetwork: true
       containers :
         - name : mysql
